# ttobot

./: .env.test  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  nohup.out  pyproject.toml  requirements.txt  run-server.py  sheet.py  test.py
.github/workflows/: auto-code-review.yml  test.yml
app/: __init__.py  api.py  auth.py  client.py  clients.py  config.py  constants.py  dao.py  db.py  deps.py  dto.py  exception.py  exception_handler.py  logging.py  models.py  repositories.py  router.py  services.py  slack_handler.py  slack_notification.py  store.py  utils.py  views.py
app/api/: auth.py  deps.py  dto.py  repositories.py  services.py
app/bigquery/: client.py  queue.py
app/slack/: __init__.py  community.py  contents.py  core.py  event_handler.py  exception.py  exception_handler.py  main.py  repositories.py  services.py  types.py
app/views/: community.py  login.py
docs/: 01-refactoring-plan.md  02-test-todo.md
scripts/: commit-msg-convention.py
test/: conftest.py  factories.py  test_remind.py  test_reminder.py  test_store.py
test/api/: conftest.py  test_auth.py  test_contents_router.py  test_login.py  (+5 more)
worklog/: 001-테스트 보강 준비-문서와-uv-환경-구축.md  002-API-인증과-로그인-라우터-테스트-작성.md  003-refresh-라우터-버그-수정.md  004-콘텐츠와-메시지-라우터-테스트-작성.md  005-종이비행기-라우터와-ApiService-테스트.md  006-포인트-메시지-인프런-글쓰기참여-라우터-테스트.md  007-슬랙-core-이벤트-테스트.md  008-슬랙-contents-이벤트-테스트.md  009-슬랙-community-이벤트-테스트.md  010-슬랙-log-이벤트-테스트.md  011-슬랙-subscriptions-이벤트-테스트.md  012-슬랙-writing_participation-이벤트-테스트.md  013-슬랙-미들웨어와-에러-핸들러-테스트.md  014-백그라운드-서비스-테스트-보강.md  015-CI-추가하기.md
(+40 files in other folders)
