[project]
name = "ttobot"
version = "0.1.0"
description = "글또 슬랙 봇 + 백엔드 서버"
requires-python = ">=3.11,<3.13"
dependencies = [
    # 핵심 런타임
    "fastapi>=0.109,<0.116",
    "uvicorn>=0.20",
    "slack-bolt>=1.16",
    "slack-sdk>=3.19",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "PyJWT>=2.9",
    # 데이터/유틸
    "pandas>=2.1",
    "polars>=0.19",
    "orjson>=3.8",
    "regex>=2023.12",
    "tenacity>=9.0",
    "loguru>=0.7",
    "aiocache>=0.12",
    "httpx>=0.24",
    "beautifulsoup4>=4.12",
    "googletrans>=4.0.2",
    "APScheduler>=3.10",
    # 구글/빅쿼리
    "gspread>=5.7",
    "google-cloud-bigquery>=3.25",
    "pandas-gbq>=0.23",
    "pyarrow>=17.0",
    "db-dtypes>=1.3",
    "oauth2client>=4.1",
    # 기타
    "python-dotenv>=0.21",
    "requests>=2.28",
    "aiohttp>=3.8,<3.10",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-sugar>=0.9",
    "httpx>=0.24",
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
pythonpath = ["."]

[tool.uv]
package = false

# googletrans 4.0.0rc1 이 httpx==0.13.3 을 강제 고정해서 FastAPI TestClient(>=0.24 필요)와 충돌한다.
# 실사용에서는 httpx 신버전과도 동작이 가능하므로 핀을 풀어준다.
override-dependencies = [
    "httpx>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py311"
